(finally).  Also added unit tests for those.

The tests for the socket code no longer download my home page.  Now,
I create a listening socket and a sending socket for a TCP/IP and a
UNIX socket.  Then I send/receive data across the socket and compare
what I received with what I sent.  Self-contained is better. :-)
----------------------------------------------------------------------
Sun Aug  4 20:11:38 2002                        Michael Jennings (mej)

Did a complete overhaul of the configure.in script.  Moved everything
to macros in libast.m4, which is now installed by the package.  That
will facilitate easier development of libast-based programs.

Also added the beginnings of a regexp class with support for PCRE,
POSIX-, and BSD-style regular expressions.
----------------------------------------------------------------------
Sun Aug  4 22:38:47 2002                        Michael Jennings (mej)

Apparently shared library building breaks if AC_PROG_CC isn't directly
in configure.in.... :(
----------------------------------------------------------------------
Sun Aug  4 22:47:33 2002                        Michael Jennings (mej)

Fix the cache variable name.
----------------------------------------------------------------------
Sat Aug 10 12:06:50 2002                        Michael Jennings (mej)

Undefined symbol fix.  Got overzealous with my s///.
----------------------------------------------------------------------
Tue Aug 13 21:38:04 2002                        Michael Jennings (mej)

Working implementation of a regular expression object which supports
(and abstracts) PCRE, POSIX, or BSD regular expression functionality.
Also fixed some bugs with the list code and the cpp stuff.
----------------------------------------------------------------------
Tue Aug 13 22:47:45 2002                        Michael Jennings (mej)

Oops, disable those old functions for now.
----------------------------------------------------------------------